navbar section done!

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>innovate saloon</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -15,33 +15,67 @@
   </head>
   <body>
     <!-- ====== Navbar Start ====== -->
+    <section id="navBar">
+      <div class="container">
+        <div class="navBar__wrapper">
+          <div class="navBar__logo">
+            <img src="./images/logo.png" alt="" />
+          </div>
+          <div class="navBar__menu">
+            <ul class="navBar__list">
+              <li>
+                <a href="#">Home <i class="fa-solid fa-angle-down"></i></a>
+              </li>
+              <li>
+                <a href="#">About <i class="fa-solid fa-angle-down"></i> </a>
+              </li>
+              <li>
+                <a href="#">service <i class="fa-solid fa-angle-down"></i></a>
+              </li>
+              <li>
+                <a href="#">portfolio <i class="fa-solid fa-angle-down"></i></a>
+              </li>
+              <li>
+                <a href="#">Price <i class="fa-solid fa-angle-down"></i></a>
+              </li>
+              <li>
+                <a href="#">blog <i class="fa-solid fa-angle-down"></i></a>
+              </li>
+            </ul>
+          </div>
+          <div class="navBar__btn">
+            <a href="#">Contact Us</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- ====== Navbar End ====== -->
 
-    <!-- ====== Navbar Start ====== -->
-    <!-- ====== Navbar End ====== -->
+    <!-- ======  Start ====== -->
+    <!-- ======  End ====== -->
 
-    <!-- ====== Navbar Start ====== -->
-    <!-- ====== Navbar End ====== -->
+    <!-- ======  Start ====== -->
+    <!-- ======  End ====== -->
 
-    <!-- ====== Navbar Start ====== -->
-    <!-- ====== Navbar End ====== -->
+    <!-- ======  Start ====== -->
+    <!-- ======  End ====== -->
 
-    <!-- ====== Navbar Start ====== -->
-    <!-- ====== Navbar End ====== -->
+    <!-- ======  Start ====== -->
+    <!-- ======  End ====== -->
 
-    <!-- ====== Navbar Start ====== -->
-    <!-- ====== Navbar End ====== -->
+    <!-- ======  Start ====== -->
+    <!-- ======  End ====== -->
 
-    <!-- ====== Navbar Start ====== -->
-    <!-- ====== Navbar End ====== -->
+    <!-- ======  Start ====== -->
+    <!-- ======  End ====== -->
 
-    <!-- ====== Navbar Start ====== -->
-    <!-- ====== Navbar End ====== -->
+    <!-- ======  Start ====== -->
+    <!-- ======  End ====== -->
 
-    <!-- ====== Navbar Start ====== -->
-    <!-- ====== Navbar End ====== -->
+    <!-- ======  Start ====== -->
+    <!-- ======  End ====== -->
 
-    <!-- ====== Navbar Start ====== -->
-    <!-- ====== Navbar End ====== -->
+    <!-- ======  Start ====== -->
+    <!-- ======  End ====== -->
   </body>
 </html>
