banner section done!

--- a/index.html
+++ b/index.html
@@ -51,8 +51,27 @@
     </section>
     <!-- ====== Navbar End ====== -->
 
-    <!-- ======  Start ====== -->
-    <!-- ======  End ====== -->
+    <!-- ====== Banner Start ====== -->
+    <section id="banner">
+      <div class="container">
+        <div class="banner__wrapper">
+          <div class="banner__info">
+            <h1>WELCOME!</h1>
+            <h2>The Best Hair Saloon</h2>
+            <p>
+              We use quality products and the latest styling techniques to bring
+              out your very best. We promises to provide you with 5-star
+              service.
+            </p>
+            <a href="#">Make Appointment</a>
+          </div>
+          <div class="banner__img">
+            <img src="./images/banner_img.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ====== Banner End ====== -->
 
     <!-- ======  Start ====== -->
     <!-- ======  End ====== -->
